--- a/Clients/Views/Shared/DataTablesLayout.cshtml
+++ b/Clients/Views/Shared/DataTablesLayout.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="~/adminlte-3.2.0/plugins/datatables-buttons/css/buttons.bootstrap4.min.css">
     <!-- Theme style -->
     <link rel="stylesheet" href="~/adminlte-3.2.0/dist/css/adminlte.min.css">
+    @RenderSection("href", required: false)
 </head>
 <body class="hold-transition sidebar-mini">
     <div class="wrapper">
